--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'junit:junit:4.13.2'
+	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
 	testImplementation 'org.assertj:assertj-core:3.24.2'
 }
 
